--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="oYKxq3kFOLIYzTeAWgpmqmvdQEt8yjr4MjfTT9tciVE" />
     <title>Rider Style</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
