--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="oYKxq3kFOLIYzTeAWgpmqmvdQEt8yjr4MjfTT9tciVE" />
-    <meta name="keywords" content="beginner rider, beginner rider's guidance, rules for beginner rider, riding confidence"/>
-    <meta name="description" content="Beginner's guidance for riding a motorcycle, everything you need to know."/> 
+    <meta name="keywords" content="beginner rider, beginner rider's guidance, rules for beginner rider, riding confidence, how to ride"/>
+    <meta name="description" content="How to ride a motorcycle, everything you need to know."/> 
     <title>Rider Style</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
