--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="google-site-verification" content="oYKxq3kFOLIYzTeAWgpmqmvdQEt8yjr4MjfTT9tciVE" />
     <meta name="keywords" content="beginner rider, beginner rider's guidance, rules for beginner rider, riding confidence, how to ride"/>
     <meta name="description" content="How to ride a motorcycle, everything you need to know."/> 
-    <title>Rider Style</title>
+    <title>Rider's Mind </title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
