--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="oYKxq3kFOLIYzTeAWgpmqmvdQEt8yjr4MjfTT9tciVE" />
-    <meta name="keywords" content="beginner rider, beginner rider's guidance, rules for beginner rider, riding confidence, how to ride"/>
-    <meta name="description" content="How to ride a motorcycle, everything you need to know."/> 
-    <title>Rider's Mind </title>
+    <meta name="keywords" content="ride motorcycle, ride bike, riding confidence, how to ride"/>
+    <meta name="description" content="How to ride a motorcycle, How to ride bike, everything you need to know."/> 
+    <title>How To Ride A Motorcycle, Full Guide </title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
